src/content/styles/modules/_details.scss
@mixin details {
    $slide-out-width: rem(28);

    .rv-show-single {
        display: none !important;
    }

    rv-details {
        @include include-size(rv-sm) {
            position: fixed;
            left: 0;
            top: $toolbar-height + 1;
            right: 0;
            bottom: 0;
            z-index: 3;
        }
    }

    rv-details-header {
        position: relative;
        display: flex; // go on IE with your obscure bugs: http://stackoverflow.com/a/33222765; fixes https://github.com/fgpv-vpgf/fgpv-vpgf/issues/1646
        flex-direction: column; //this bug is apparently fixed in IE Edge;
    }

    .rv-details-summary {
        height: 80%;
        width: 70%;
        border-radius: 0;

        @include include-size(rv-sm) {
            width: 100%;
            min-width: 100%;
            height: 100%;
            min-height: 100%;
        }

        @include include-size(rv-md) {
            top: $viewport-gutter - 2;
            bottom: $viewport-gutter - 2;
            left: $viewport-gutter - 2;
            right: $viewport-gutter - 2;
            width: initial;
            max-width: none;
            height: initial;
            max-height: none;
            position: absolute;
        }
    }

    .rv-details {
        flex-direction: column;
        display: flex;
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        left: 0;

        .rv-subheader {
            padding-right: rem(2.5);

            .md-subhead {
                display: block;
            }
        }

        &-content {
            display: block;
        }

        &-layer {
            &-button {
                padding: 0;
                margin: 0;
                position: absolute;
                left: 0;
                width: 100%;
                top: 0;
                bottom: 0;
                z-index: 1;
            }

            &-badge {
                position: absolute;
                bottom: rem(0.3);
                height: rem(1.6);
                width: rem(1.6);
                left: rem(3.2) - rem(0.3);
                font-size: rem(1.0);
                display: flex;
                background-color: $primary-color-dark;
                color: $primary-color-text;
                border-radius: 50%;
                align-items: center;
                justify-content: center;
            }

            &-name {
                text-transform: none;
                font-size: rem(1.6);
                line-height: rem(2.0);
                font-weight: normal;
                margin: rem(0.8);
                text-overflow: ellipsis;
                display: flex;
                flex-direction: column;
                overflow: hidden;

                > span {
                    white-space: nowrap;
                    overflow: hidden;
                    text-overflow: ellipsis;
                }
            }
        }

        &-layer-list {
            width: rem(4.8);
            position: absolute;
            background: white;
            left: 0;
            top: 0;
            bottom: - rem(0.8);
            border-right: solid 1px $divider-color-light;
            overflow: hidden;

            @include include-size(rv-gt-sm) {
                padding: rem(0.8) 0;
            }

            &-item {
                width: 100%;
                display: flex;
                position: relative;
                height: rem(4.8);
                align-items: center;
                position: relative;

                md-progress-circular {
                    position: absolute;
                    left: rem(4.8 - 2.4) / 2; // loading spinner is 24 x 24 pixels
                    top: rem(4.8 - 2.4) / 2;
                    z-index: 0;
                }

                rv-toc-entry-symbology {
                    margin: rem(0.8);
                    opacity: 1;
                    transition: opacity $swift-ease-in-duration $swift-ease-in-out-timing-function;
                    // this makes the symbology image more opaque when the loading indicator is visible
                    &.rv-disabled {
                        opacity: 0.2;
                    }
                }

                &.rv-selected {
                    &:before {
                        background-color: $accent-color;
                    }
                }

                &:before {
                    content: "";
                    position: absolute;
                    top: 0;
                    bottom: 0;
                    left: 0;
                    width: 3px;
                    background-color: transparent;
                    transition: background-color $swift-ease-in-duration $swift-ease-in-out-timing-function;
                    z-index: 3;
                }
            }
        }

        .rv-details-data {
            @include details-data;
        }

        &.rv-expanded {
            .rv-details-layer-list {
                border-color: $divider-color;
            }

            .rv-details-data {
                opacity: 0.3;
            }
        }

        &.rv-multiple {
            .rv-details-data,
            rv-details-header {
                margin-left: rem(4.8);
            }
        }

        .rv-details-attrib-key {
            margin-right: 0;
            padding-right: 10px;
            position: relative;
            font-weight: bold;
            float: left;
        }

        .rv-details-attrib-value {
            margin-right: 0;
            padding-left: 15px;
            position: relative;
            float: right;
        }

        .rv-sub-subhead {
            font-size: rem(1.6);
        }
    }
}

$details-padding: rem(0.4);
$details-record-height: rem(6.0);

@mixin details-data {
    opacity: 1;
    transition: opacity $swift-ease-in-duration $swift-ease-in-out-timing-function;
    padding: 0;

    .rv-subsection {
        padding: rem(0.8) 0;

        .rv-subheader {
            padding: rem(0.8) rem(1.6);
        }
    }

    .rv-subcontent {
        @include EsriFeature;
        @include Text;
        @include HTML;
        @include nothing;
    }
}

@mixin EsriFeature {
    &.rv-EsriFeature {
        .rv-records-list {
            @extend %action-list;
            @extend %shadow-group-list;

            > li:last-child .rv-details-list{
                border-bottom: none;
            }
        }

        .rv-details-list {
            @extend %zebra-list;

            padding: rem(0.8) rem(1.6);
            border-bottom: 1px solid $divider-color-light;
        }

        rv-details-record-esrifeature {
            @extend %action-list-group;

            height: $details-record-height;
            padding-right: $details-padding + rem(1.0);
            padding-left: $details-padding + rem(1.0);

            .rv-toggled.md-toggle-icon {
                transform: rotate(180deg) !important;
            }

            // hide list shadow when the layer list is closed; otherwise, it will still be visilbe
            &:hover ~ .rv-details-list:not(.ng-hide) ~ .rv-shadow {
                background-color: $primary-color;
            }
        }
    }
}

@mixin Text {
    .rv-details-text {
        white-space: pre-wrap;
        font-family: inherit;
        padding: rem(0.8) rem(1.6);
        margin: 0;
    }
}

@mixin HTML {
    .rv-details-html {

    }
}

@mixin nothing {
    .rv-nothing {
        padding: rem(0.8) rem(1.6);
    }
}

